k8/development/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: solar-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: solar-system
  template:
    metadata:
      labels:
        app: solar-system
    spec:
      automountServiceAccountToken: false
      containers:
      - name: solar-system
        image: hariveer/solar-system:1.0.0
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: "256Mi"
            cpu: "500m"
            storage: "1Gi"
          limits:
            memory: "512Mi"
            cpu: "1"
