k8/development/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: solar-system
  namespace: default
  labels:
    app: solar-system
spec:
  type: NodePort
  selector:
    app: solar-system
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
