k8/development/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: solar-system
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: solar-system.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: solar-system
            port:
              number: 8080
