k8/development/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: solar-system
spec:
  rules:
  - host: solar.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: solar-system
            port:
              number: 8080
